--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -19,9 +19,9 @@ body
 #header
   h1
     margin: 0 10px
-    font-size: 14px
+    font-size: 24px
     line-height: $header_height
-    color: rgba(130,130,130,1)
+    color: #333
     +text_shadow(0, 1px, 2px, #fff)
 
   .right
@@ -231,7 +231,7 @@ a:hover .avatar
 
 .article-contents
   font-family: ProximaNovaCondensedRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif
-  font-size: 15px
+  font-size: 14px
   line-height: 1.6em
   color: #444
   
