--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title rread
+    %title (5) rread
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
