--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,4 +1,66 @@
 body
-    font-family: "Proxima Nova", Helvetica
-    font-size: 12px
-    -webkit-font-smoothing: antialiased
+  font-family: "Proxima Nova", Helvetica
+  font-size: 12px
+  -webkit-font-smoothing: antialiased
+
+header.main
+  height: 90px
+  width: 100%
+  position: relative
+
+  .left
+    position: absolute
+    top: 0
+    left: 0
+
+    .logo
+      color: #222
+      font-size: 70px
+      font-weight: bold
+
+  .right
+    position: absolute
+    top: 0
+    right: 0
+
+    .avatar
+      width: 50px
+      height: 50px
+      max-width: 50px
+      max-height: 50px
+      margin-top: 14px
+      margin-right: 5px
+
+.round
+  border-radius: 2px
+  -moz-border-radius: 2px
+
+.circular
+  border-radius: 10em
+  -moz-border-radius: 10em
+
+.reader
+  .articles
+    .article
+      color: #222
+      padding-bottom: 12px
+
+      img.favicon
+        float: left
+        padding-right: 4px
+        width: 14px
+
+      .title
+        font-size: 15px
+
+      .date
+        display: block
+        font-style: italic
+        float: left
+
+      .blog
+        display: block
+        padding-left: 5px
+
+    .article.read
+      color: #555
