--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,34 +2,7 @@ body
   font-family: "Proxima Nova", Helvetica
   font-size: 12px
   -webkit-font-smoothing: antialiased
-
-header.main
-  height: 90px
-  width: 100%
-  position: relative
-
-  .left
-    position: absolute
-    top: 0
-    left: 0
-
-    .logo
-      color: #222
-      font-size: 70px
-      font-weight: bold
-
-  .right
-    position: absolute
-    top: 0
-    right: 0
-
-    .avatar
-      width: 50px
-      height: 50px
-      max-width: 50px
-      max-height: 50px
-      margin-top: 14px
-      margin-right: 5px
+  background: #fefefe
 
 .round
   border-radius: 2px
@@ -39,28 +12,118 @@ header.main
   border-radius: 10em
   -moz-border-radius: 10em
 
+.clearer
+  clear: both
+
+.box
+  padding: 7px
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.35)
+  border-radius: 2px
+  background: #fff
+
+header.main
+  height: 100%
+  width: 100%
+  position: relative
+  margin-bottom: 10px
+
+  .left
+    width: 50%
+    float: left
+
+    .logo
+      color: #333
+      font-size: 50px
+      font-weight: bold
+
+  .right
+    width: 50%
+    float: right
+    text-align: right
+
+    .avatar
+      width: 50px
+      height: 50px
+      max-width: 50px
+      max-height: 50px
+      position: absolute
+      bottom: 0
+      display: inline
+
 .reader
-  .articles
-    .article
-      color: #222
-      padding-bottom: 12px
+  .left
+    width: 80%
+    float: left
 
-      img.favicon
-        float: left
-        padding-right: 4px
-        width: 14px
-
-      .title
-        font-size: 15px
-
-      .date
-        display: block
-        font-style: italic
+    header
+      .left
+        width: 50%
         float: left
 
-      .blog
-        display: block
-        padding-left: 5px
+        .all-items
+          float: left
+          color: #62ACE6
+          margin-right: 15px
 
-    .article.read
-      opacity: 0.8
+          .num
+            background: #62ACE6
+            color: #fff
+            padding: 0 4px
+            display: inline
+            border-radius: 4px
+
+        .inbox
+          float: left
+          margin-right: 15px
+
+          .num
+            background: #A9A9A9
+            color: #fff
+            padding: 0 4px
+            display: inline
+            border-radius: 4px
+
+      .right
+        width: 50%
+        float: right
+        text-align: right
+
+    .articles
+      padding: 8px 10px
+      margin-top: 12px
+
+      .article
+        color: #111
+        padding: 15px 0
+        border-bottom: 1px dashed #ddd
+
+        img.favicon
+          float: left
+          padding-right: 4px
+          width: 14px
+
+        .title
+          font-size: 15px
+
+        .date
+          display: block
+          font-style: italic
+          float: left
+
+        .blog
+          display: block
+          padding-left: 5px
+
+      .article.read
+        opacity: 0.7
+
+      .article:last-child
+        border-bottom: none
+
+  .right
+    width: 20%
+    float: right
+
+    .activity-feed
+      width: 100%
+      height: 100%
