--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
       .right
         .avatar
           %img{:src => "#{current_user.avatar}", :class => 'circular'}
-        / .name
-        /   = current_user.full_name
+          
+      .clearer
 
-    =yield
+    = yield
