--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,8 +1,17 @@
+*
+  -moz-box-sizing: border-box
+  -webkit-box-sizing: border-box
+  box-sizing: border-box
+  -webkit-font-smoothing: antialiased
+
+p
+  padding: 5px 0
+  line-height: 1.2em
+
 body
   font-family: "Proxima Nova", Helvetica
   font-size: 12px
-  -webkit-font-smoothing: antialiased
-  background: #fefefe
+  background: url('groovepaper.png') repeat
 
 .round
   border-radius: 2px
@@ -21,11 +30,14 @@ body
   border-radius: 2px
   background: #fff
 
+.wrapper
+  width: 900px
+  margin: 0 auto
+
 header.main
   height: 100%
   width: 100%
-  position: relative
-  margin-bottom: 10px
+  margin: 12px 0
 
   .left
     width: 50%
@@ -33,29 +45,39 @@ header.main
 
     .logo
       color: #333
-      font-size: 50px
+      font-size: 26px
       font-weight: bold
+      padding-top: 6px
 
   .right
     width: 50%
     float: right
     text-align: right
 
-    .avatar
-      width: 50px
-      height: 50px
-      max-width: 50px
-      max-height: 50px
-      position: absolute
-      bottom: 0
-      display: inline
+    .avatar 
+      position: relative
+
+      img
+        width: 38px
+        height: 38px
+        max-width: 38px
+        max-height: 38px
+
+      .text
+        position: absolute
+        right: 48px
+        top: 14px
+        color: #555
 
 .reader
   .left
-    width: 80%
+    width: 100%
     float: left
 
     header
+      margin-right: 220px
+      padding: 12px 10px
+
       .left
         width: 50%
         float: left
@@ -89,41 +111,76 @@ header.main
         text-align: right
 
     .articles
-      padding: 8px 10px
-      margin-top: 12px
+      margin-right: 220px
+      margin-top: 10px
+      padding: 0
 
       .article
+        position: relative
         color: #111
-        padding: 15px 0
+        padding: 20px 15px
         border-bottom: 1px dashed #ddd
 
         img.favicon
           float: left
-          padding-right: 4px
+          margin-right: 4px
           width: 14px
+          margin-top: 1px
 
         .title
           font-size: 15px
 
         .date
+          position: absolute
+          top: 20px
+          right: 15px
           display: block
-          font-style: italic
-          float: left
+          color: #aaa
 
         .blog
           display: block
-          padding-left: 5px
+          padding-top: 5px
+          padding-left: 19px
+          color: #666
+
+        .content
+          display: none
+          padding-top: 20px
+          font-size: 15px
+          color: #111
+
+          img
+            border-radius: 200pxpx
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5)
+
+
+      .article:hover
+        background: #fbfbfb
 
       .article.read
-        opacity: 0.7
+        .title
+          color: #888
+        
+      .article.expanded
 
       .article:last-child
         border-bottom: none
 
   .right
-    width: 20%
-    float: right
+    width: 200px
+    float: left
+    margin-left: -200px
 
     .activity-feed
       width: 100%
       height: 100%
+      min-height: 300px
+
+    .ad
+      width: 100%
+      height: 200px
+      margin-top: 10px
+
+    .static
+      width: 100%
+      margin-top: 10px
