--- a/app/views/reader/index.html.haml
+++ b/app/views/reader/index.html.haml
@@ -5,7 +5,7 @@
         .all-items
           All Items
           .num
-            12
+            = @unread_count
         .inbox
           Inbox
           .num
@@ -22,6 +22,16 @@
     .activity-feed.box
       test
       test
+
+    .ad.box
+      Ad Goes Here
+
+    .static
+      %a{:href => '#'} Terms
+      %a{:href => '#'} Privacy
+      %a{:href => '#'} API
+      %a{:href => '#'} Help
+
     .clearer
 
 %script{:id => 'tpl-article', :type => 'text/template'}
@@ -29,6 +39,7 @@
   .title
     {{{title}}}
   .date
-    {{date}}&nbsp;-&nbsp;
+    {{date}}
   .blog
     {{blogName}}
+  .content
