--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -150,7 +150,7 @@ header.main
           color: #111
 
           img
-            border-radius: 200pxpx
+            border-radius: 2px
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5)
 
 
