Activity feed design

--- a/app/views/reader/index.html.haml
+++ b/app/views/reader/index.html.haml
@@ -20,8 +20,46 @@
 
   .right
     .activity-feed.box
-      test
-      test
+      .activity-item
+        .avatar
+          %img.circular{:src => current_user.avatar}
+        .msg
+          Tyler subscribed to TechCrunch just for fun.
+      .activity-item
+        .avatar
+          %img.circular{:src => current_user.avatar}
+        .msg
+          Tyler subscribed to TechCrunch just for fun.
+      .activity-item
+        .avatar
+          %img.circular{:src => current_user.avatar}
+        .msg
+          Tyler subscribed to TechCrunch just for fun.
+      .activity-item
+        .avatar
+          %img.circular{:src => current_user.avatar}
+        .msg
+          Tyler subscribed to TechCrunch just for fun.
+      .activity-item
+        .avatar
+          %img.circular{:src => current_user.avatar}
+        .msg
+          Tyler subscribed to TechCrunch just for fun.
+      .activity-item
+        .avatar
+          %img.circular{:src => current_user.avatar}
+        .msg
+          Tyler subscribed to TechCrunch just for fun.
+      .activity-item
+        .avatar
+          %img.circular{:src => current_user.avatar}
+        .msg
+          Tyler subscribed to TechCrunch just for fun.
+      .activity-item
+        .avatar
+          %img.circular{:src => current_user.avatar}
+        .msg
+          Tyler subscribed to TechCrunch just for fun.
 
     .ad.box
       Ad Goes Here
