--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -31,7 +31,7 @@ body
   background: #fff
 
 .wrapper
-  width: 900px
+  width: 950px
   margin: 0 auto
 
 header.main
@@ -45,9 +45,9 @@ header.main
 
     .logo
       color: #333
-      font-size: 26px
+      font-size: 30px
       font-weight: bold
-      padding-top: 6px
+      padding-top: 3px
 
   .right
     width: 50%
@@ -75,7 +75,7 @@ header.main
     float: left
 
     header
-      margin-right: 220px
+      margin-right: 250px
       padding: 12px 10px
 
       .left
@@ -111,7 +111,7 @@ header.main
         text-align: right
 
     .articles
-      margin-right: 220px
+      margin-right: 250px
       margin-top: 10px
       padding: 0
 
@@ -174,14 +174,42 @@ header.main
         border-bottom: none
 
   .right
-    width: 200px
+    width: 230px
     float: left
-    margin-left: -200px
+    margin-left: -230px
 
     .activity-feed
       width: 100%
       height: 100%
       min-height: 300px
+      max-height: 500px
+      padding: 0
+      overflow: scroll
+
+      .activity-item
+        min-height: 55px
+        position: relative
+        padding: 12px 12px
+        border-bottom: 1px dashed #ddd
+        color: #777
+
+        .avatar
+          position: absolute
+          left: 12px
+          top: 12px
+
+          img
+            width: 30px
+            height: 30px
+            max-width: 30px
+            max-height: 30px
+
+        .msg
+          position: absolute
+          left: 50px
+          top: 12px
+          font-size: 11px
+          padding-right: 12px
 
     .ad
       width: 100%
