--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -182,7 +182,7 @@ header.main
       width: 100%
       height: 100%
       min-height: 300px
-      max-height: 500px
+      max-height: 400px
       padding: 0
       overflow: scroll
 
@@ -210,6 +210,10 @@ header.main
           top: 12px
           font-size: 11px
           padding-right: 12px
+          line-height: 1.2em
+
+      .activity-item:last-child
+        border-bottom: none
 
     .ad
       width: 100%
