Bad subscription bug for feed now fixed. Article title now fits correctly in UI.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -127,9 +127,11 @@ header.main
           margin-right: 4px
           width: 14px
           margin-top: 1px
+          padding-bottom: 14px
 
         .title
           font-size: 15px
+          padding-right: 100px
 
         .date
           position: absolute
