--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -196,9 +196,8 @@ header.main
         color: #777
 
         .avatar
-          position: absolute
-          left: 12px
-          top: 12px
+          float: left
+          padding-right: 10px
 
           img
             width: 30px
@@ -207,9 +206,6 @@ header.main
             max-height: 30px
 
         .msg
-          position: absolute
-          left: 50px
-          top: 12px
           font-size: 11px
           padding-right: 12px
           line-height: 1.2em
