--- a/app/views/reader/index.html.haml
+++ b/app/views/reader/index.html.haml
@@ -47,5 +47,4 @@
   .avatar
     %img.circular
   .msg
-    {{userName}} {{actionName}} {{targetName}}.
-  .clearer
+    {{{userName}}} {{{actionName}}} {{{targetName}}}.
