--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,3 +1,9 @@
+@font-face
+  font-family: 'Proxima Nova'
+  font-style: normal
+  font-weight: 400
+  src: local('Proxima Nova Regular'), local('ProximaNova-Regular'), font-url('proxima_nova-regular-webfont.woff') format('woff')
+
 *
   -moz-box-sizing: border-box
   -webkit-box-sizing: border-box
