Mark all as read

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -10,14 +10,15 @@
   box-sizing: border-box
   -webkit-font-smoothing: antialiased
 
-p
-  padding: 5px 0
-  line-height: 1.2em
-
 body
   font-family: "Proxima Nova", Helvetica
   font-size: 12px
   background: url('groovepaper.png') repeat
+  color: #111
+
+p
+  padding: 5px 0
+  line-height: 1.2em
 
 .round
   border-radius: 2px
@@ -115,6 +116,10 @@ header.main
         width: 50%
         float: right
         text-align: right
+
+        a
+          text-decoration: none
+          color: #111
 
     .articles
       margin-right: 250px
