--- a/app/views/reader/index.html.haml
+++ b/app/views/reader/index.html.haml
@@ -13,7 +13,7 @@
         .sources
           Sources
       .right
-        Mark All as Read
+        %a{:href => '#'} Mark All as Read
       .clearer
 
     .articles.box  
