cave story spinner, start of shortcuts

--- a/app/views/reader/index.html.haml
+++ b/app/views/reader/index.html.haml
@@ -16,7 +16,8 @@
         %a{:href => '#'} Mark All as Read
       .clearer
 
-    .articles.box  
+    .articles.box
+      = image_tag('cave-story-spinner.gif', :class => 'spinner')
 
   .right
     .activity-feed.box
