--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -122,9 +122,16 @@ header.main
           color: #111
 
     .articles
+      min-height: 57px
       margin-right: 250px
       margin-top: 10px
       padding: 0
+
+      img.spinner
+        width: 30px
+        margin: 0 auto
+        display: block
+        padding: 10px 0
 
       .article
         position: relative
