--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -17,8 +17,10 @@ body
   color: #111
 
 p
-  padding: 5px 0
-  line-height: 1.2em
+  margin: 0 0 15px
+  font-size: 15px
+  line-height: 23px
+  color: #111
 
 .round
   border-radius: 2px
@@ -167,14 +169,13 @@ header.main
         .content
           display: none
           padding-top: 20px
-          font-size: 15px
-          color: #111
 
           img
             max-width: 100%
             max-height: 100%
             border-radius: 2px
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5)
+            margin-bottom: 10px
 
 
       .article:hover
