Removed implicit read from activity feed

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -211,6 +211,7 @@ header.main
         
       .article.expanded
         cursor: auto
+        background: #fff
         .title
           font-size: 18px
 
@@ -235,7 +236,7 @@ header.main
         position: relative
         padding: 12px 12px
         border-bottom: 1px dashed #ddd
-        color: #777
+        color: #555
 
         .avatar
           float: left
