--- a/app/views/reader/index.html.haml
+++ b/app/views/reader/index.html.haml
@@ -6,10 +6,10 @@
           All Items
           .num
             = @unread_count
-        .inbox
-          Inbox
-          .num
-            0
+        / .inbox
+        /   Inbox
+        /   .num
+        /     0
         .sources
           Sources
       .right
