--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %title rread
     = stylesheet_link_tag "reset"
+    = stylesheet_link_tag "vendor/bootstrap"
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
