link style update

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -26,6 +26,9 @@ a
   color: #62ACE6
   text-decoration: none
 
+a:hover
+  border-bottom: 2px solid #ddd
+
 h1, h2, h3
   margin-bottom: 15px
 
@@ -37,9 +40,6 @@ h2
 
 h3
   font-size: 1.5em
-
-a:hover
-  text-decoration: underline
 
 .round
   border-radius: 2px
