--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title rread
+    %title rread (0)
     = stylesheet_link_tag "reset"
     = stylesheet_link_tag "vendor/bootstrap"
     = stylesheet_link_tag "application"
