more pesky hash fixes for firefox

--- a/app/views/reader/index.html.haml
+++ b/app/views/reader/index.html.haml
@@ -3,7 +3,7 @@
     %header.box
       .left
         .all-items
-          All Items
+          %a{:href => '#'} All Items
           .num
             = @unread_count
 
