--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -76,6 +76,7 @@ h3
     -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2)
   .dropdown-menu li > a:hover, .dropdown-menu .active > a, .dropdown-menu .active > a:hover
     background: #62ACE6
+    border: none
 .btn-group.open .dropdown-toggle
   box-shadow: none
   -webkit-box-shadow: none
