Just getting filtering workign

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -186,6 +186,14 @@ header.main
         .add:hover
           background: #ddd
 
+    .source-title
+      height: 25px
+      margin: 10px 250px -10px 0
+      border-bottom-right-radius: 0
+      border-bottom-left-radius: 0
+      font-size: 11px
+      color: #666
+
     .articles
       min-height: 57px
       margin-right: 250px
