All articles link works. Style changes.

--- a/app/views/reader/index.html.haml
+++ b/app/views/reader/index.html.haml
@@ -20,9 +20,9 @@
               %li
                 %a{:href => '#', 'data-id' => sub[:blog_id]}
                   = sub[:blog_name]
-                  (
-                  = sub[:unread_count]
-                  )
+                  / (
+                  / = sub[:unread_count]
+                  / )
             
       .right
         %a{:href => '#'} Mark All as Read
