--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -41,6 +41,13 @@ h2
 h3
   font-size: 1.5em
 
+.btn-group
+  position: inherit
+
+.open
+  position: relative
+
+
 .round
   border-radius: 2px
   -moz-border-radius: 2px
@@ -175,12 +182,13 @@ header.main
           top: -12px
           background: #eee
           cursor: pointer
+          border-left: 1px solid #ccc
 
           .text
             font-size: 26px
             position: relative
             top: 6px
-            left: 11px
+            left: 10px
             color: #777
 
         .add:hover
@@ -217,12 +225,13 @@ header.main
           float: left
           margin-right: 6px
           width: 14px
-          margin-top: 1px
+          margin-top: 3px
           padding-bottom: 14px
 
         .title
           font-size: 15px
           padding-right: 100px
+          line-height: 1.3em
 
         .date
           position: absolute
@@ -234,7 +243,7 @@ header.main
         .blog
           display: block
           padding-top: 6px
-          padding-left: 22px
+          padding-left: 21px
           color: #666
 
         .content
