--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -49,7 +49,6 @@ h3
 .open
   position: relative
 
-
 .round
   border-radius: 2px
   -moz-border-radius: 2px
@@ -251,6 +250,9 @@ header.main
         .content
           display: none
           margin: 20px 50px 0 20px
+          font-size: 15px
+          line-height: 23px
+          color: #000
 
           img
             max-width: 100%
