--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,13 +14,13 @@ body
   font-family: "Proxima Nova", Helvetica
   font-size: 12px
   background: url('groovepaper.png') repeat
-  color: #000
+  color: #333
 
 p
   margin: 0 0 15px
-  font-size: 15px
-  line-height: 23px
-  color: #000
+  font-size: 14px
+  line-height: 22px
+  color: #333
 
 a
   color: #62ACE6
@@ -33,15 +33,16 @@ h1, h2, h3
   padding-top: 5px
   padding-bottom: 20px
   font-weight: bold
+  color: #444
 
 h1
-  font-size: 2em
+  font-size: 1.5em
 
 h2
-  font-size: 1.7em
+  font-size: 1.3em
 
 h3
-  font-size: 1.5em
+  font-size: 1.1em
 
 .btn-group
   position: inherit
@@ -217,7 +218,7 @@ header.main
 
       .article
         position: relative
-        color: #111
+        color: #333
         padding: 20px 15px
         border-bottom: 1px dashed #ddd
         cursor: pointer
@@ -252,14 +253,15 @@ header.main
           margin: 20px 50px 0 20px
           font-size: 15px
           line-height: 23px
-          color: #000
+          color: #333
 
           img
             max-width: 100%
             max-height: 100%
             border-radius: 2px
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5)
-            margin-bottom: 10px
+            margin: 5px 15px 10px 0
+            float: left
 
           li
             padding-left: 30px
@@ -277,7 +279,7 @@ header.main
         cursor: auto
         background: #fff
         .title
-          font-size: 16px
+          // font-size: 16px
 
       .article:last-child
         border-bottom: none
