--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -129,7 +129,17 @@ header.main
         top: 14px
         color: #555
 
+.index
+  .centered
+    padding: 20px
+    .logo
+      font-size: 40px
+      color: #555
+      padding-bottom: 15px
+
 .reader
+  margin-top: 10px
+  
   .left
     width: 100%
     float: left
