rread logo clickable

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -104,10 +104,12 @@ header.main
     float: left
 
     .logo
-      color: #222
-      font-size: 30px
-      // font-weight: bold
-      padding-top: 3px
+      a
+        color: #222
+        font-size: 30px
+        padding-top: 3px
+      a:hover
+        border-bottom: none
 
   .right
     width: 50%
@@ -138,7 +140,7 @@ header.main
       padding-bottom: 15px
 
 .reader
-  margin-top: 10px
+  margin-top: 5px
   
   .left
     width: 100%
