--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,9 @@
 <div class="wrapper">
     <header class="main">
         <div class="left">
-            <div class="logo">rread</div>
+            <div class="logo">
+                <a href="/">rread</a>
+            </div>
         </div>
         <div class="right">
             <div class="avatar">
